# 2022_2_MRGA_team

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  coverage.sh  docker-compose.yml  swaggerApi.yaml
project/: CMakeLists.txt
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qt/deploy_qml_imports/: PartyTime.cmake
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/: CTestTestfile.cmake  FramedImage.qml  cmake_install.cmake  myapp_qmltyperegistrations.cpp  myappplugin_PartyTimePlugin.cpp  qmldir
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/.qt_plugins/: Qt6_QmlPlugins_Imports_PartyTime.cmake  Qt6_QmlPlugins_Imports_PartyTime.rsp
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/.rcc/: myapp_raw_qml_0.qrc  qmake_PartyTime.qrc
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/.rcc/qmlcache/: myapp_FramedImage_qml.cpp  myapp_qml_loader_file_list.rsp  myapp_qmlcache_loader.cpp
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/Components/: CTestTestfile.cmake  cmake_install.cmake
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/Components/UI/: CTestTestfile.cmake  cmake_install.cmake
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/Components/components_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/Pages/: CTestTestfile.cmake  cmake_install.cmake
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/Pages/pages_autogen/: deps  mocs_compilation.cpp
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/PartyTime_autogen/: deps  deps~ZelenkoDev2  moc_predefs.h  mocs_compilation.cpp
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/connector/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/myapp_autogen/: deps  moc_predefs.h
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/myappplugin_autogen/: deps  moc_predefs.h
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/PartyTime/qmltypes/: myapp_foreign_types.txt
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/connector/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/connector/lib/: CTestTestfile.cmake  cmake_install.cmake
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/connector/tests/: CTestTestfile.cmake  cmake_install.cmake  connector_test[1]_include.cmake
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/interface/: cmake_install.cmake
project/build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/interface/PartyTime/: CTestTestfile.cmake  cmake_install.cmake
project/client/: CMakeLists.txt  CMakeLists — копия.txt  main.cpp
project/client/PartyTime/: CMakeLists.txt  base.cpp  base.h  static.qrc  style.css
project/client/PartyTime/Components/: CMakeLists.txt
project/client/PartyTime/Pages/: CMakeLists.txt
project/client/PartyTime/connector/: CMakeLists.txt  Makefile
project/client/connector/: CMakeLists.txt  Makefile
project/client/connector/UML/: UML-записка.pages
project/client/connector/cmake/: conditions.cmake  flags.cmake
project/client/connector/lib/: CMakeLists.txt
project/client/connector/scripts/: check.sh  cov.sh  memtest.sh  test.sh
project/client/connector/tests/: CMakeLists.txt  dummy_server.go
project/client/connector/tests/src/: main.cpp
project/client/interface/: CMakeLists.txt  Makefile
project/client/interface/PartyTime/: CMakeLists.txt  Makefile  base.cpp  base.h  base.ui  coverage.sh  main.cpp  painter.cpp  painter.hpp  static.qrc  style.css
project/client/interface/build-PartyTime-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  CTestTestfile.cmake  build.ninja  cmake_install.cmake
project/client/interface/linters/: run.sh
project/client/interface/scripts/: coverage.sh  memtest.sh  run.sh
project/client/interface/tests/: CMakeLists.txt  interfaceTest.cpp
project/client/scripts/: memtest.sh
project/client/tests/: CMakeLists.txt
project/networking/: CMakeLists.txt
project/networking/include/networking/: TcpConnection.hpp  TcpServer.hpp
project/networking/src/: TcpConnection.cpp  TcpServer.cpp
project/server/: .docker-compose.yml.swp  CMakeLists.txt  Makefile  docker-compose.yml  main.cpp
project/server/handler/: CMakeLists.txt  Router.cpp  Router.hpp
project/server/handler/service/: CMakeLists.txt
project/server/handler/src/: router.cpp  router.hpp
project/server/parsing/: CMakeLists.txt  main.cpp
project/server/parsing/objects/: CMakeLists.txt
project/server/scripts/: build.sh  local_build.sh
project/server/sql_scripts/: initial.sql
project/server/src/: http_connection.cpp  http_connection.hpp  tcp_server.cpp  tcp_server.hpp
server/: CMakeLists.txt  main.cpp
server/json_struct_mapping/: CMakeLists.txt  structs.hpp
server/json_struct_mapping/struct_mapping_lib/: CMakeLists.txt  debug.h  member.h  parser.h  struct_mapping.h
server/lib/include/: db_manager.hpp
server/lib/interface/: iuser_repository.hpp
server/lib/src/: authorization_repository.cpp  db_manager.cpp  event_repository.cpp
server/server/: http_connection.cpp  http_connection.hpp  router.cpp  router.hpp  service.cpp  service.hpp  tcp_server.hpp
server/tmp/: router.cpp  router.hpp
tests/: CMakeLists.txt  interfaceTest.cpp  memtest.sh
(+601 files in other folders)
