cmake_minimum_required(VERSION 3.18)
project(json_struct_mapping)

add_subdirectory(struct_mapping_lib)

message("STRUCT_MAPPING_LIB_INCLUDE_DIRS = ${STRUCT_MAPPING_LIB_INCLUDE_DIRS}")
message("STRUCT_MAPPING_LIB_LIBRARIES = ${STRUCT_MAPPING_LIB_LIBRARIES}")

file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB INCLUDE_DIRS objects ${STRUCT_MAPPING_LIB_INCLUDE_DIRS})

include_directories(include ${STRUCT_MAPPING_LIB_INCLUDE_DIRS})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

#set(PARSING_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
#set(PARSING_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)