cmake_minimum_required(VERSION 3.14)
project(service_lib)

include_directories(SYSTEM ${MAIN_DIR}/deps/include)

add_subdirectory(repository/lib)

message("POSTGRES_LIB_LIBRARIES = " ${POSTGRES_LIB_LIBRARIES})
message("POSTGRES_LIB_INCLUDE_DIRS = " ${POSTGRES_LIB_INCLUDE_DIRS})

file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src)

add_library(${PROJECT_NAME} STATIC ${SOURCES})

target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_DIRS})

set(SERVICE_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(SERVICE_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

target_include_directories(${PROJECT_NAME} PUBLIC ${JSON_STRUCT_MAPPING_LIB_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${JSON_STRUCT_MAPPING_LIB_LIBRARIES})

target_include_directories(${PROJECT_NAME} PUBLIC ${POSTGRES_LIB_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${POSTGRES_LIB_LIBRARIES})